--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,110 @@ header {
   color: #fff;
   font-size: 12px;
 }
+
+/*--------------------------------------
+--------------*** ABOUT SECTION ***------------
+----------------------------------------*/
+.about-section {
+  height: 645px;
+  padding: 80px 0;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+.intro-title {
+  color: #1c1c24;
+  font-size: 36px;
+  margin-bottom: 18px;
+}
+
+.intro-section p {
+  color: #333;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.intro-video {
+  width: 560px;
+  height: 343px;
+}
+
+/*--------------------------------------
+--------------*** FOOTER SECTION ***------------
+----------------------------------------*/
+.footer-background {
+  height: 445px;
+  background-image: url('../img/pattern2.png');
+  position: relative;
+  overflow: hidden;
+}
+
+.orange-overlay {
+  position: absolute;
+  height: 100%;
+  width: 125%;
+  bottom: 0;
+  left: -171px;
+}
+
+.footer-content  {
+  padding-top: 90px;
+  margin: 0 auto;
+  font-family: 'Roboto', sans-serif;
+}
+
+.footer-logo {
+  text-align: center;
+}
+
+.footer-logo img {
+  width: 281px;
+  height: 61px;
+}
+
+.footer-social {
+  margin: 0 auto;
+  padding-top: 40px;
+  text-align: center;
+}
+
+.footer-social ul li {
+  list-style: none;
+  display: inline;
+  padding: 0 16px;
+}
+
+.footer-social ul li a i {
+  font-size: 32px;
+  color: #fff;
+}
+
+.footer-menu {
+  margin: 0 auto;
+  padding-top: 45px;
+  margin-bottom: 45px;
+  text-align: center;
+  color: #888;
+  font-weight: lighter;
+}
+.footer-menu ul li {
+  list-style: none;
+  display: inline;
+  padding: 0 12px;
+}
+
+.footer-menu ul li a {
+  color: #888;
+  font-size: 11.5px;
+  font-weight: 300;
+  letter-spacing: .5px;
+}
+
+.footer-copyright {
+  color: #888;
+  font-size: 13px;
+  font-weight: 300;
+  margin: auto;
+  text-align: center;
+  letter-spacing: .5px;
+}
