--- a/css/style.css
+++ b/css/style.css
@@ -267,19 +267,82 @@ header {
 --------------*** FACTS SECTION ***------------
 ----------------------------------------*/
 .facts-strip {
-  height: 296px;
+  height: 295px;
+  background-color: #1c1c24;
   background-image: url('../img/parallax1.jpg');
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+
+}
+
+.facts-strip-icons, .container {
   position: relative;
+  z-index: 1;
 }
 
-.facts-strip:after {
-  background-color: rgba(0, 0, 0. 0.7);
+.facts-strip-icons:after {
+  background-color: rgba(0, 0, 0, 0.7);
+  content: '';
   position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
 
+.icon-facts {
+  float: right;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+.icon-facts h3 {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.count {
+  font-size: 48px;
+  font-weight: 500;
+}
+
+.attendees, .speakers, .sessions, .countries {
+  float: left;
+  width: 25%;
+  padding-top: 120px;
+  padding-left: 100px;
+}
+
+.facts-icon i {
+  font-size: 28px;
+  height: 70px;
+  width: 70px;
+  background-color: #EC143D;
+  color: #fff;
+  border-radius: 100%;
+}
+
+.fa.fa-microphone {
+  padding-left: 27px;
+  padding-top: 22px;
+}
+
+.fa.fa-users {
+  padding-left: 21px;
+  padding-top: 23px;
+}
+
+.fa.fa-calendar {
+  padding-left: 22px;
+  padding-top: 21px;
+}
+
+.fa.fa-globe {
+  padding-left: 23px;
+  padding-top: 21px;
+}
 /*--------------------------------------
 --------------*** FOOTER SECTION ***------------
 ----------------------------------------*/
