--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,11 @@ header {
   padding: 80px 0;
 }
 
+.event-schedule-content {
+  max-width: 960px;
+  margin: auto;
+}
+
 .schedule-title {
   color: #333;
   font-family: 'Roboto', sans-serif;
