--- a/css/style.css
+++ b/css/style.css
@@ -632,6 +632,42 @@ header {
   border: 2px solid transparent;
   border-radius: 25px;
 }
+
+/*--------------------------------------
+--------------*** EVENT PRICES ***------------
+----------------------------------------*/
+.event-prices {
+  height: 704px;
+  background-color: #f5f5f5;
+  background-image: url('../img/parallax3.jpg');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 100px 15px;
+}
+
+.prices-panel {
+  background: #fff;
+  width: 30.33333%;
+  padding: 50px;
+  margin: 0 15px;
+  border-radius: 5px;
+  float: left;
+}
+
+.prices-panel ul {
+  list-style: none;
+}
+
+.prices-panel ul li {
+  border-top: 1px dotted #ddd;
+  padding: 15px 0;
+}
+
+.prices-panel ul li:first-child {
+  border-top: 1px solid #fff;
+}
 /*--------------------------------------
 --------------*** FOOTER SECTION ***------------
 ----------------------------------------*/
